--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  height: 80vh;
+  height: auto;
   align-items: center;
 }
 #controls {
@@ -15,7 +15,7 @@ h2 {
 }
 
 .display-area {
-  height: 100%;
+  min-height: 500px;
   width: 42vw;
   margin: 5px 5px;
   background-color: var(--color1);
@@ -24,7 +24,7 @@ h2 {
   resize: none;
 }
 
-@media (max-width: 810px) {
+@media (max-width: 950px) {
   #container{
     flex-direction: row;
     height: auto;
